@@ -194,6 +194,13 @@ parses and displays CORBA object references, with ping-like features to check
 if objects are alive (used libglade).
 </ul>
 
+<ul>
+<li><a href="http://sf.net/projects/realmforge">RealmForge GDK</a> -
+a cross-platform game development framework and toolkit written in Mono/C#
+and powered by the Axiom 3D engine. It will allow for the rapid development
+of cutting-edge script & data-driven games and MMORPGs.
+</ul>
+
 
 <!-- COPY THESE LINES AND FILL IN TO ADD A NEW APP
 <ul>
