@@ -1,5 +1,7 @@
 2004-07-12  Damon Chaplin  <damon@gnome.org>
 
+	* apps.html: added RealmForge GDK.
+
 	* index.html: 
 	* download.html: 
 	* history.html: added 2.6.0 info.
